syntax = "proto3";

package main;

service TransactionService {
    rpc GetLastTransaction(GetLastTransactionRequest) returns (GetLastTransactionResponse);
    rpc GetTransactionStatus(GetTransactionStatusRequest) returns (GetTransactionStatusResponse);
    rpc StoreTransaction(StoreTransactionRequest) returns (StoreTransactionResponse);
    rpc TimeLockTransaction(TimeLockTransactionRequest) returns (TimeLockTransactionResponse);
    rpc CoordinateTransaction(CoordinateTransactionRequest) returns (CoordinateTransactionResponse);
    rpc CrossValidationTransaction(CrossTransactionValidationRequest) returns (CrossTransactionValidationResponse);
}

message GetLastTransactionRequest{
    bytes transaction_address = 1;
    TransactionType type = 2;
    int64 timestamp = 3;
    bytes signature_request = 4;
}

message GetLastTransactionResponse {
    Transaction transaction = 1;
    int64 timestamp = 2;
    bytes signature_response = 3;
}

message GetTransactionStatusRequest {
    bytes transaction_hash = 1;
    int64 timestamp = 2;
    bytes signature_request = 3;
}

message GetTransactionStatusResponse {
    TransactionStatus status = 1;
    int64 timestamp = 2;
    bytes signature_response = 3;
}

message StoreTransactionRequest {
    MinedTransaction mined_transaction = 1;
    int32 minimum_validations = 2;
    int64 timestamp = 3;
    bytes signature_request = 4;
}

message StoreTransactionResponse {
    int64 timestamp = 1;
    bytes signature_response = 2;
}

message TimeLockTransactionRequest {
    bytes transaction_hash = 1;
    bytes address = 2;
    bytes master_node_public_key = 3;
    int64 timestamp = 4;
    bytes signature_request = 5;
}

message TimeLockTransactionResponse {
    int64 timestamp = 1;
    bytes signature_response = 2;
}

message CoordinateTransactionRequest {
    Transaction transaction = 1;
    int32 minimum_validations = 2;
    ElectedNodeList elected_coordinators = 3;
    int64 timestamp = 4;
    bytes signature_request = 5;
}

message CoordinateTransactionResponse {
    int64 timestamp = 1;
    bytes signature_response = 2;
}

message CrossTransactionValidationRequest {
    Transaction transaction = 1;
    CoordinatorStamp master_validation = 2;
    int64 timestamp = 3;
    bytes signature_request = 4;
}

message CrossTransactionValidationResponse {
    ValidationStamp validation_stamp = 1;
    int64 timestamp = 2;
    bytes signature_response = 3;
}


message SharedKeyPair{
    bytes encrypted_private_key = 1;
    bytes public_key = 2;
}

enum TransactionType {
    KEYCHAIN = 0;
    ID = 1;
    CONTRACT_CREATION = 2;
}

message Transaction {
    bytes address = 1;
    TransactionType type = 2;
    map<string, bytes> data = 3;
    int64 timestamp = 4;
    bytes public_key = 5;
    bytes signature = 6;
    bytes emitter_signature = 7;
    SharedKeyPair shared_keys_emitter_proposal = 8;
    bytes transaction_hash = 9;
}

message CoordinatorStamp {
    repeated bytes previous_validation_nodes = 1;
    bytes proof_of_work = 2;
    ValidationStamp stamp = 3;
    ElectedNodeList elected_coordinators_nodes = 4;
    ElectedNodeList elected_cross_validation_nodes = 5;
    ElectedNodeList elected_storage_nodes = 6;
}

message ElectedNodeList {
    bytes public_key = 1;
    repeated ElectedNode nodes = 2;
    bytes signature = 3;
}

message ElectedNode {
    bytes public_key = 1;
    bool isUnreachable = 2;
    bool isMaster = 3;
    int32 patchNumber = 4;
    bool isOK = 5;
}

message ValidationStamp {
    enum ValidationStatus {
        NO = 0;
        OK = 1;
    }
    
    bytes public_key = 1;
    ValidationStatus status = 2;
    int64 timestamp = 3;
    bytes signature = 4;
}

message MinedTransaction {
    Transaction transaction = 1;
    CoordinatorStamp coordinator_stamp = 2;
    repeated ValidationStamp cross_validations = 3;
}

enum TransactionStatus {
    UNKNOWN = 0;
    IN_PROGRESS = 1;
    SUCCESS = 2;
    FAILURE = 3;
}